# MinimalistCamView

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
MinimalistCamView/: Gui.py  helpers.py  main.py
